@@ -55,6 +55,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #15118: Change return value of os.uname() and os.times() from
+  plain tuples to immutable iterable objects with named attributes
+  (structseq objects).
+
 - Speed up _decimal by another 10-15% by caching the thread local context
   that was last accessed. In the pi benchmark (64-bit platform, prec=9),
   _decimal is now only 1.5x slower than float.
